# rinha-2024

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.app  Dockerfile.full  Dockerfile.lb  Dockerfile.lb-tcp  README.md  docker-compose-embedded.yml  docker-compose-prod-embedded.yml  docker-compose-prod.yml  docker-compose.yml  nginx.conf
.github/workflows/: release.yml
axum-unix-socket/: Cargo.toml
axum-unix-socket/src/: lib.rs
espora-db/: Cargo.toml
espora-db/src/: builder.rs  lib.rs  lock.rs  page.rs  tokio.rs
rinha-app/: Cargo.toml
rinha-app/src/: main.rs
rinha-espora-embedded/: Cargo.toml
rinha-espora-embedded/src/: main.rs
rinha-espora-server/: Cargo.toml
rinha-espora-server/src/: main.rs  ring_buffer.rs
rinha-load-balancer/: Cargo.toml
rinha-load-balancer-tcp/: Cargo.toml
rinha-load-balancer-tcp/src/: main.rs
rinha-load-balancer/src/: main.rs
src/: lib.rs  main.rs
