workspace = { members = [ "espora-db", "rinha-app", "rinha-load-balancer", "rinha-load-balancer-tcp"] }

[package]
name = "rinha-2024"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[dependencies]
axum = { version = "0.7.4", features = ["http2"] }
espora-db = { path = "./espora-db" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
time = { version = "0.3.34", features = ["formatting", "macros", "serde", "parsing"] }
tokio = { version = "1.36.0", features = ["full"] }
