[workspace]
members = [
  "axum-unix-socket",
  "espora-db",
  "rinha-app",
  "rinha-espora-embedded",
  "rinha-espora-server",
  "rinha-load-balancer",
  "rinha-load-balancer-tcp",
]

[package]
name = "rinha"
version.workspace = true
edition = "2021"

[workspace.package]
version = "1.2.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
time = { version = "0.3.34", features = ["formatting", "macros", "serde", "parsing"] }
