[package]
name = "espora-db"
version = "1.0.1"
edition = "2021"

[dependencies]
async-stream = { version = "0.3.5", optional = true }
bitcode = { version = "0.5.1", features = ["serde"] }
futures = { version = "0.3.30", optional = true, default-features = false, features = ["std"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", optional = true, features = ["fs", "io-std"] }

[features]
tokio = ["async-stream", "futures", "dep:tokio"]

[dev-dependencies]
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["fs", "io-std", "test-util"] }
