[package]
name = "rinha-espora-embedded"
version.workspace = true
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["http2"] }
axum-unix-socket = { path = "../axum-unix-socket" }
espora-db = { path = "../espora-db", features = ["tokio"] }
futures = "0.3.30"
rinha = { path = "../" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
