[package]
name = "rinha-load-balancer"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[dependencies]
axum = "0.7.4"
hyper-util = { version = "0.1.3", features = ["client-legacy", "http1", "http2"] }
tokio = { version = "1.36.0", features = ["full"] }
